      Geissert.  (Closes: #514095)
  * checks/scripts{,.desc}:
    + [RA] Add pedantic check for maintainer scripts using #!/bin/sh -e
      instead of set -e in the script body.  (Closes: #119045)

  * lib/Lintian/Collect.pm:
    + [RA] Defer loading of the subclasses until the constructor to avoid
      circular dependencies at compilation time.
  * lib/Lintian/Relation.pm:
    + [RA] New class based on the existing Dep module that handles package
      relationship analysis.  Now includes documentation, uses a more
      object-oriented structure, and removes a special case handling of
      Perl alternatives.  This module will eventually replace Dep.
  * lib/Lintian/Relation/Version.pm:
    + [RA] New module containing the version comparison code from Dep.
      This module will only be needed until Lintian is converted to
      Dpkg::Version or AptPkg::Version.
  * lib/Spelling.pm:
    + [RA] Add some additional typo and case corrections.  Patch from
      Raphael Geissert.

  * unpack/list-{binpkg,udebpkg}:
    + [RA] Preserve the source_version field from the previous list when
      adding new packages, remove some dead code, and restructure for
      improved readability.  Thanks to Jordà Polo for the analysis.
      (Closes: #507849)

 -- Russ Allbery <rra@debian.org>  Mon, 02 Feb 2009 09:41:37 -0800

lintian (2.2.2) unstable; urgency=low

  The "this is why spooky action at a distance is bad" release.

  * checks/copyright-file:
    + [ADB] Treat the new copyright file format's "License-Alias: Perl" as
      indicating that the package is licensed under the same terms as Perl.
      Thanks, gregor herrmann.  (Closes: #513831)
  * checks/debconf:
    + [RA] Reset $/ before issuing duplicate-fields-in-templates to
      prevent problems if -i was given.
  * checks/debhelper:
    + [RA] Remove stray localization of $/, which broke -i when issuing
      tags about ${misc:Depends}.
  * checks/fields: